# backend-interview

./: .flake8  Makefile  README.md  black.cfg  isort.cfg  pyproject.toml
data/: endpoints.json  requests.json
interview/: main.py  request.py  server.py
