[tool.poetry]
name = "interview"
version = "0.1.0"
description = ""
authors = ["Philip Kung <pkung67@utexas.edu>"]
readme = "README.md"
packages = [{include = "interview"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
